--- a/_notebooks/2022-09-21-rl_실습.ipynb
+++ b/_notebooks/2022-09-21-rl_실습.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "910bcbb4-771b-4bd4-8157-51ba02102cc9",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "640b1790-3c5b-4c85-abc1-a5cdd154dbd2",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5a5d2ccc-1a9b-4908-8681-f73f3c0cd0dd",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6be93451-ffca-4c15-a92c-2abcab015491",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "3e464206-6c50-49d7-8ffb-ce2b22beb6d2",
    "metadata": {},
    "outputs": [
@@ -257,17 +257,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "4bb59a9c-eb89-4cb5-91dd-1c041f0d9cb0",
+   "cell_type": "markdown",
+   "id": "881c4220-418c-4ace-87d0-3ea930a63bb3",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# 적합\n",
-    "### hat y = hat (E(y|X=x)) = hat beta_0 +hat beta_1 * x\n",
+    "### 적합"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90656174-2c86-442f-aaa3-28ec543d29ef",
+   "metadata": {},
+   "source": [
+    "$\\hat{ y} = \\widehat{(E(y|X=x))} = \\hat{\\beta_0} + \\hat{\\beta_1} * x$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "553551fc-f3e2-4d26-8dcb-a3313c01d636",
+   "metadata": {},
+   "source": [
+    "$H_0$ : $\\beta_0$ =0 vs $H_1$ : $\\beta_0 \\ne 0$\n",
     "\n",
-    "#### H0 : beta0 =0 vs H1 : beta0 != 0\n",
-    "#### H0 : beta1 =0 vs H1 : beta1 != 0"
+    "$H_0$ : $\\beta_1 =0$ vs $H_1$ : $\\beta_1 \\ne 0$"
    ]
   },
   {
@@ -289,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e97bf07f-bf6f-489d-96da-317b7de6d849",
    "metadata": {},
    "outputs": [
@@ -335,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "329a918e-3cd8-4669-b253-a9cae9ec7ea8",
    "metadata": {},
    "outputs": [
@@ -386,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "5d638174-ff72-484c-a3bb-29a10bc9d6a7",
    "metadata": {},
    "outputs": [
@@ -431,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "d5ee72c1-58a8-45fa-9541-bea3afabc61a",
    "metadata": {},
    "outputs": [
@@ -493,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "d0cca0c8-80d1-4ce3-8996-345ddebd5686",
    "metadata": {},
    "outputs": [
@@ -552,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "e9d665dd-fef3-4ce7-bf13-c2fc41f1203b",
    "metadata": {},
    "outputs": [
@@ -642,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "c441ab9b-ff73-4a76-b8da-8c05530a1009",
    "metadata": {},
    "outputs": [
@@ -706,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "52958cf1-e1d3-4dbf-894a-16d1e6f7a7b8",
    "metadata": {},
    "outputs": [
@@ -767,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "2213eb04-0c7e-46ac-8041-fd0b18ec0841",
    "metadata": {},
    "outputs": [
@@ -820,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "e49e9f58-517e-4576-8cd0-0b7ad49dbb62",
    "metadata": {},
    "outputs": [
@@ -920,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "12c0f741-367e-4a44-b2bd-1173d5cbaff5",
    "metadata": {},
    "outputs": [
@@ -968,7 +980,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
+   "id": "9e164705-090e-47ca-8592-a1cfd9878f0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A anova: 2 × 5</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>Df</th><th scope=col>Sum Sq</th><th scope=col>Mean Sq</th><th scope=col>F value</th><th scope=col>Pr(&gt;F)</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>x</th><td>1</td><td>313.04348</td><td>313.043478</td><td>45.24034</td><td>0.0001486582</td></tr>\n",
+       "\t<tr><th scope=row>Residuals</th><td>8</td><td> 55.35652</td><td>  6.919565</td><td>      NA</td><td>          NA</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A anova: 2 × 5\n",
+       "\\begin{tabular}{r|lllll}\n",
+       "  & Df & Sum Sq & Mean Sq & F value & Pr(>F)\\\\\n",
+       "  & <int> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\tx & 1 & 313.04348 & 313.043478 & 45.24034 & 0.0001486582\\\\\n",
+       "\tResiduals & 8 &  55.35652 &   6.919565 &       NA &           NA\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A anova: 2 × 5\n",
+       "\n",
+       "| <!--/--> | Df &lt;int&gt; | Sum Sq &lt;dbl&gt; | Mean Sq &lt;dbl&gt; | F value &lt;dbl&gt; | Pr(&gt;F) &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|\n",
+       "| x | 1 | 313.04348 | 313.043478 | 45.24034 | 0.0001486582 |\n",
+       "| Residuals | 8 |  55.35652 |   6.919565 |       NA |           NA |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "          Df Sum Sq    Mean Sq    F value  Pr(>F)      \n",
+       "x         1  313.04348 313.043478 45.24034 0.0001486582\n",
+       "Residuals 8   55.35652   6.919565       NA           NA"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "anova(model1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a91a0232-6857-4748-af06-1badf06c30af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A anova: 2 × 5</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>Df</th><th scope=col>Sum Sq</th><th scope=col>Mean Sq</th><th scope=col>F value</th><th scope=col>Pr(&gt;F)</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>x</th><td>1</td><td>3769.1895</td><td>3769.1895</td><td>576.8138</td><td>1.79763e-09</td></tr>\n",
+       "\t<tr><th scope=row>Residuals</th><td>9</td><td>  58.8105</td><td>   6.5345</td><td>      NA</td><td>         NA</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A anova: 2 × 5\n",
+       "\\begin{tabular}{r|lllll}\n",
+       "  & Df & Sum Sq & Mean Sq & F value & Pr(>F)\\\\\n",
+       "  & <int> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\tx & 1 & 3769.1895 & 3769.1895 & 576.8138 & 1.79763e-09\\\\\n",
+       "\tResiduals & 9 &   58.8105 &    6.5345 &       NA &          NA\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A anova: 2 × 5\n",
+       "\n",
+       "| <!--/--> | Df &lt;int&gt; | Sum Sq &lt;dbl&gt; | Mean Sq &lt;dbl&gt; | F value &lt;dbl&gt; | Pr(&gt;F) &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|\n",
+       "| x | 1 | 3769.1895 | 3769.1895 | 576.8138 | 1.79763e-09 |\n",
+       "| Residuals | 9 |   58.8105 |    6.5345 |       NA |          NA |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "          Df Sum Sq    Mean Sq   F value  Pr(>F)     \n",
+       "x         1  3769.1895 3769.1895 576.8138 1.79763e-09\n",
+       "Residuals 9    58.8105    6.5345       NA          NA"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "anova(model2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "5cfeec3a-722e-41b5-abea-f42c6550b1b5",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "7fb9d152-49c4-4a0e-bee8-5f8a024f9420",
    "metadata": {},
    "outputs": [],
@@ -1020,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "6669643d-01e2-4ca0-9f3c-6c4954ffb5f7",
    "metadata": {},
    "outputs": [
@@ -1051,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "id": "a0fd0552-3c6c-4b17-a357-6bb6cc0cb8b4",
    "metadata": {},
    "outputs": [],
@@ -1069,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "id": "86d9574f-75fe-4161-ac6d-8d72fea15851",
    "metadata": {},
    "outputs": [],
@@ -1081,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "id": "48799c46-4049-4e71-b280-f78d65c6702e",
    "metadata": {},
    "outputs": [
@@ -1168,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "id": "d2f134f6-8b2c-4bfd-8af7-6926b547b435",
    "metadata": {},
    "outputs": [
@@ -1221,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "id": "b7767c21-2702-4176-afa5-f36463a7d19f",
    "metadata": {},
    "outputs": [],
@@ -1234,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "id": "d330f43c-b514-4f27-a7f3-0f89a2c0dba6",
    "metadata": {},
    "outputs": [
@@ -1277,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 34,
    "id": "b184250b-eb5e-47cf-a31b-8e1e421bc3b6",
    "metadata": {},
    "outputs": [],
@@ -1290,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "id": "67978fee-69ad-4f13-a094-2992211694bc",
    "metadata": {},
    "outputs": [
@@ -1359,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "id": "766cd612-1cd3-470c-a713-1b7421fc70d1",
    "metadata": {},
    "outputs": [
@@ -1425,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "id": "0346c62a-ec54-4b79-b412-7fc860fed893",
    "metadata": {},
    "outputs": [
@@ -1525,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "id": "4aa7c7fe-1621-43f6-b3da-136ed7829ed4",
    "metadata": {},
    "outputs": [
@@ -1623,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "id": "14ecfcca-48f3-4744-902b-faa54f03a465",
    "metadata": {},
    "outputs": [],
@@ -1641,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "id": "d0283590-f1b3-42b4-bca7-950528546092",
    "metadata": {},
    "outputs": [],
@@ -1651,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "id": "9219f8d6-cb54-4671-9360-7f01ffd77494",
    "metadata": {},
    "outputs": [],
@@ -1662,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 42,
    "id": "8792fefd-f786-4d55-aca9-4b28232d3a2b",
    "metadata": {},
    "outputs": [
@@ -1701,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "id": "da0e8b3c-fc83-474c-bf9c-1adf35136bc7",
    "metadata": {},
    "outputs": [
@@ -1737,7 +1859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "id": "38521135-2129-4d18-9eaf-3cb07d6bcd75",
    "metadata": {},
    "outputs": [],
@@ -1749,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "id": "d81f606c-ecb1-45c6-8dd9-81b90ee618d3",
    "metadata": {},
    "outputs": [
@@ -1797,7 +1919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 46,
    "id": "134dc59b-5e52-4a25-8882-9eb6515d386f",
    "metadata": {},
    "outputs": [],
@@ -1807,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "id": "cbf98ab3-1ae9-43c2-9229-01579619147c",
    "metadata": {},
    "outputs": [
@@ -1898,7 +2020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "id": "503ff0a3-7b4f-4b2e-9df3-dd5fe45c1bd7",
    "metadata": {},
    "outputs": [
@@ -1948,10 +2070,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 49,
    "id": "8e9effb7-5310-4f5d-8238-bf42fa077d27",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: zoo\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘zoo’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    as.Date, as.Date.numeric\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 독립성검정 : DW test\n",
     "library(lmtest)"
@@ -1959,7 +2099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 50,
    "id": "79e337f0-6708-4503-ae73-b5bec9941950",
    "metadata": {},
    "outputs": [
@@ -2003,7 +2143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "id": "df554607-0d92-4856-a46f-b32fbf5c295d",
    "metadata": {},
    "outputs": [
@@ -2050,7 +2190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "id": "27fff0f4-c826-431f-8b8d-d65ca4cec3fe",
    "metadata": {},
    "outputs": [
@@ -2078,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "id": "20bbfa93-c84e-42e0-ad08-9b9b9b7d8ffd",
    "metadata": {},
    "outputs": [
@@ -2121,7 +2261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 54,
    "id": "ac28aef3-8511-442e-9002-d16cb0973cbe",
    "metadata": {},
    "outputs": [
@@ -2155,7 +2295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 55,
    "id": "ddd61f41-5def-43bf-ba15-1041c3bd9a34",
    "metadata": {},
    "outputs": [
@@ -2203,7 +2343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 56,
    "id": "c7006427-f0be-485b-97c2-add73bfc620c",
    "metadata": {},
    "outputs": [],
@@ -2213,7 +2353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 57,
    "id": "df16100c-da5d-4102-b768-c8311a8b4d6a",
    "metadata": {},
    "outputs": [
@@ -2253,7 +2393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 58,
    "id": "a319c069-d9b8-4fa1-931a-f5ebab68cb99",
    "metadata": {},
    "outputs": [],
@@ -2263,7 +2403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 59,
    "id": "75ddb416-202b-4e80-84e9-7b4af6dd89d6",
    "metadata": {},
    "outputs": [
@@ -2308,7 +2448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 60,
    "id": "ebd4b08c-0873-4328-889d-30546e6119a2",
    "metadata": {},
    "outputs": [
@@ -2339,7 +2479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 61,
    "id": "60c70a8d-bbf5-4e77-8e0c-142b121bccf1",
    "metadata": {},
    "outputs": [
@@ -2483,30 +2623,6 @@
     "- 시간순 index\n",
     "- 최근 관측 데이터에 영향 많이 받는 편"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28b3135d-e689-4199-9e45-ada5ee3f8bf4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0eac302f-ff15-494f-90b3-acb4602affad",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c9c4858b-5edf-48e9-a69a-5968df3119f9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
