--- a/_notebooks/2022_09_19_Assignment_1_Copy1.ipynb
+++ b/_notebooks/2022_09_19_Assignment_1_Copy1.ipynb
@@ -2,12 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1aa76da0-d9a3-4f01-a815-7c4578770181",
+   "id": "ce3b8281-1483-42f2-9194-13bad45a5bce",
    "metadata": {
-    "id": "1aa76da0-d9a3-4f01-a815-7c4578770181"
+    "id": "cac470df-29e7-4148-9bbd-d8b9a32fa570",
+    "tags": []
    },
    "source": [
-    "# Assignment 1 (09.19) -- 풀이O "
+    "# Assignment 1 (22.09.19) -- 풀이O \n",
+    "> 교수님 풀이, 안 건들임\n",
+    "\n",
+    "- toc:true\n",
+    "- branch: master\n",
+    "- badges: true\n",
+    "- comments: false\n",
+    "- author: 최규빈"
    ]
   },
   {
