--- a/_notebooks/2022-09-29-ml_4주차_9월28일.ipynb
+++ b/_notebooks/2022-09-29-ml_4주차_9월28일.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 1,
    "id": "c929aede-8fe2-48a0-9e0f-c72322d15795",
    "metadata": {
     "id": "c929aede-8fe2-48a0-9e0f-c72322d15795"
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 2,
    "id": "5d013d82-0a2d-4df4-9c14-15e43f6d83d4",
    "metadata": {
     "id": "5d013d82-0a2d-4df4-9c14-15e43f6d83d4",
@@ -88,7 +88,7 @@
        "(array([1, 2, 3]), tensor([1, 2, 3]))"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 3,
    "id": "aec0f1ed-cb64-425a-a215-1b8815b5c439",
    "metadata": {
     "id": "aec0f1ed-cb64-425a-a215-1b8815b5c439",
@@ -122,7 +122,7 @@
        "array([3.12345679])"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 4,
    "id": "c90aa64e-1b41-477f-abcf-bd17acf6ca2d",
    "metadata": {
     "id": "c90aa64e-1b41-477f-abcf-bd17acf6ca2d",
@@ -146,7 +146,7 @@
        "tensor([3.1235])"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
    "id": "fc134ed7-2020-432e-82ff-7e968c7f9475",
    "metadata": {},
    "source": [
-    "tensor는 gpu에 저장하기 때문에 메모리 아끼기 위해 정밀도가 낮은 경향이 있다."
+    "(서연필기)tensor는 gpu에 저장하기 때문에 메모리 아끼기 위해 정밀도가 낮은 경향이 있다."
    ]
   },
   {
