--- a/_notebooks/2022-10-03-tf-자격증_Certificate_Category_3_cats_vs_dogs_(강의).ipynb
+++ b/_notebooks/2022-10-03-tf-자격증_Certificate_Category_3_cats_vs_dogs_(강의).ipynb
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "2uHXDA_vninF"
    },
@@ -551,8 +551,84 @@
       "Epoch 3: val_loss did not improve from 0.69342\n",
       "582/582 [==============================] - 158s 271ms/step - loss: 0.6932 - acc: 0.5036 - val_loss: 0.6934 - val_acc: 0.4901\n",
       "Epoch 4/20\n",
-      "358/582 [=================>............] - ETA: 55s - loss: 0.6932 - acc: 0.5016"
+      "582/582 [==============================] - ETA: 0s - loss: 0.6932 - acc: 0.5032\n",
+      "Epoch 4: val_loss did not improve from 0.69342\n",
+      "582/582 [==============================] - 157s 270ms/step - loss: 0.6932 - acc: 0.5032 - val_loss: 0.6934 - val_acc: 0.4901\n",
+      "Epoch 5/20\n",
+      "582/582 [==============================] - ETA: 0s - loss: 0.6932 - acc: 0.5032\n",
+      "Epoch 5: val_loss did not improve from 0.69342\n",
+      "582/582 [==============================] - 157s 270ms/step - loss: 0.6932 - acc: 0.5032 - val_loss: 0.6934 - val_acc: 0.4901\n",
+      "Epoch 6/20\n",
+      "582/582 [==============================] - ETA: 0s - loss: 0.6932 - acc: 0.5034\n",
+      "Epoch 6: val_loss did not improve from 0.69342\n",
+      "582/582 [==============================] - 157s 270ms/step - loss: 0.6932 - acc: 0.5034 - val_loss: 0.6934 - val_acc: 0.4901\n",
+      "Epoch 7/20\n",
+      "582/582 [==============================] - ETA: 0s - loss: 0.6932 - acc: 0.5032\n",
+      "Epoch 7: val_loss did not improve from 0.69342\n",
+      "582/582 [==============================] - 187s 321ms/step - loss: 0.6932 - acc: 0.5032 - val_loss: 0.6934 - val_acc: 0.4901\n",
+      "Epoch 8/20\n",
+      "582/582 [==============================] - ETA: 0s - loss: 0.6932 - acc: 0.5033\n",
+      "Epoch 8: val_loss did not improve from 0.69342\n",
+      "582/582 [==============================] - 206s 354ms/step - loss: 0.6932 - acc: 0.5033 - val_loss: 0.6934 - val_acc: 0.4901\n",
+      "Epoch 9/20\n",
+      "582/582 [==============================] - ETA: 0s - loss: 0.6932 - acc: 0.5028\n",
+      "Epoch 9: val_loss did not improve from 0.69342\n",
+      "582/582 [==============================] - 206s 355ms/step - loss: 0.6932 - acc: 0.5028 - val_loss: 0.6934 - val_acc: 0.4901\n",
+      "Epoch 10/20\n",
+      "582/582 [==============================] - ETA: 0s - loss: 0.6932 - acc: 0.5027\n",
+      "Epoch 10: val_loss did not improve from 0.69342\n",
+      "582/582 [==============================] - 207s 356ms/step - loss: 0.6932 - acc: 0.5027 - val_loss: 0.6934 - val_acc: 0.4901\n",
+      "Epoch 11/20\n",
+      "582/582 [==============================] - ETA: 0s - loss: 0.6932 - acc: 0.5027\n",
+      "Epoch 11: val_loss did not improve from 0.69342\n",
+      "582/582 [==============================] - 208s 358ms/step - loss: 0.6932 - acc: 0.5027 - val_loss: 0.6934 - val_acc: 0.4901\n",
+      "Epoch 12/20\n",
+      "582/582 [==============================] - ETA: 0s - loss: 0.6932 - acc: 0.5027\n",
+      "Epoch 12: val_loss did not improve from 0.69342\n",
+      "582/582 [==============================] - 208s 357ms/step - loss: 0.6932 - acc: 0.5027 - val_loss: 0.6934 - val_acc: 0.4901\n",
+      "Epoch 13/20\n",
+      "582/582 [==============================] - ETA: 0s - loss: 0.6932 - acc: 0.5027\n",
+      "Epoch 13: val_loss did not improve from 0.69342\n",
+      "582/582 [==============================] - 208s 357ms/step - loss: 0.6932 - acc: 0.5027 - val_loss: 0.6934 - val_acc: 0.4901\n",
+      "Epoch 14/20\n",
+      "582/582 [==============================] - ETA: 0s - loss: 0.6932 - acc: 0.5027\n",
+      "Epoch 14: val_loss did not improve from 0.69342\n",
+      "582/582 [==============================] - 208s 356ms/step - loss: 0.6932 - acc: 0.5027 - val_loss: 0.6934 - val_acc: 0.4901\n",
+      "Epoch 15/20\n",
+      "582/582 [==============================] - ETA: 0s - loss: 0.6932 - acc: 0.5027\n",
+      "Epoch 15: val_loss did not improve from 0.69342\n",
+      "582/582 [==============================] - 208s 357ms/step - loss: 0.6932 - acc: 0.5027 - val_loss: 0.6934 - val_acc: 0.4901\n",
+      "Epoch 16/20\n",
+      "582/582 [==============================] - ETA: 0s - loss: 0.6932 - acc: 0.5027\n",
+      "Epoch 16: val_loss did not improve from 0.69342\n",
+      "582/582 [==============================] - 208s 358ms/step - loss: 0.6932 - acc: 0.5027 - val_loss: 0.6934 - val_acc: 0.4901\n",
+      "Epoch 17/20\n",
+      "582/582 [==============================] - ETA: 0s - loss: 0.6932 - acc: 0.5027\n",
+      "Epoch 17: val_loss did not improve from 0.69342\n",
+      "582/582 [==============================] - 208s 357ms/step - loss: 0.6932 - acc: 0.5027 - val_loss: 0.6934 - val_acc: 0.4901\n",
+      "Epoch 18/20\n",
+      "582/582 [==============================] - ETA: 0s - loss: 0.6932 - acc: 0.5027\n",
+      "Epoch 18: val_loss did not improve from 0.69342\n",
+      "582/582 [==============================] - 208s 357ms/step - loss: 0.6932 - acc: 0.5027 - val_loss: 0.6934 - val_acc: 0.4901\n",
+      "Epoch 19/20\n",
+      "582/582 [==============================] - ETA: 0s - loss: 0.6932 - acc: 0.5027\n",
+      "Epoch 19: val_loss did not improve from 0.69342\n",
+      "582/582 [==============================] - 207s 356ms/step - loss: 0.6932 - acc: 0.5027 - val_loss: 0.6934 - val_acc: 0.4901\n",
+      "Epoch 20/20\n",
+      "582/582 [==============================] - ETA: 0s - loss: 0.6932 - acc: 0.5027\n",
+      "Epoch 20: val_loss did not improve from 0.69342\n",
+      "582/582 [==============================] - 208s 358ms/step - loss: 0.6932 - acc: 0.5027 - val_loss: 0.6934 - val_acc: 0.4901\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fca9c382620>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -585,11 +661,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "id": "4jO1ucZ9ninH"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Inconsistent references when loading the checkpoint into this object graph. For example, in the saved checkpoint object, `model.layer.weight` and `model.layer_copy.weight` reference the same variable, while in the current object these are two different variables. The referenced variables are:(<keras.layers.convolutional.conv2d.Conv2D object at 0x7fca9d23e680> and <keras.layers.pooling.max_pooling2d.MaxPooling2D object at 0x7fca9d2a1990>).\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Inconsistent references when loading the checkpoint into this object graph. For example, in the saved checkpoint object, `model.layer.weight` and `model.layer_copy.weight` reference the same variable, while in the current object these are two different variables. The referenced variables are:(<keras.layers.convolutional.conv2d.Conv2D object at 0x7fca9d23e680> and <keras.layers.pooling.max_pooling2d.MaxPooling2D object at 0x7fca9d2a1990>).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Inconsistent references when loading the checkpoint into this object graph. For example, in the saved checkpoint object, `model.layer.weight` and `model.layer_copy.weight` reference the same variable, while in the current object these are two different variables. The referenced variables are:(<keras.layers.convolutional.conv2d.Conv2D object at 0x7fca9c26ece0> and <keras.layers.pooling.max_pooling2d.MaxPooling2D object at 0x7fca9d23e860>).\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Inconsistent references when loading the checkpoint into this object graph. For example, in the saved checkpoint object, `model.layer.weight` and `model.layer_copy.weight` reference the same variable, while in the current object these are two different variables. The referenced variables are:(<keras.layers.convolutional.conv2d.Conv2D object at 0x7fca9c26ece0> and <keras.layers.pooling.max_pooling2d.MaxPooling2D object at 0x7fca9d23e860>).\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Received incompatible tensor with shape (512,) when attempting to restore variable with shape (64,) and name layer_with_weights-1/bias/.ATTRIBUTES/VARIABLE_VALUE.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [21]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# checkpoint 를 저장한 파일명을 입력합니다.\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_weights\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcheckpoint_path\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/anaconda3/envs/py310/lib/python3.10/site-packages/keras/utils/traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     67\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[1;32m     69\u001b[0m     \u001b[38;5;66;03m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[0;32m---> 70\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[1;32m     71\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m     72\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[0;32m~/anaconda3/envs/py310/lib/python3.10/site-packages/tensorflow/python/training/saving/saveable_object_util.py:135\u001b[0m, in \u001b[0;36mResourceVariableSaveable.restore\u001b[0;34m(self, restored_tensors, restored_shapes)\u001b[0m\n\u001b[1;32m    132\u001b[0m   assigned_variable \u001b[38;5;241m=\u001b[39m resource_variable_ops\u001b[38;5;241m.\u001b[39mshape_safe_assign_variable_handle(\n\u001b[1;32m    133\u001b[0m       \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandle_op, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_var_shape, restored_tensor)\n\u001b[1;32m    134\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m--> 135\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    136\u001b[0m       \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mReceived incompatible tensor with shape \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrestored_tensor\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    137\u001b[0m       \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwhen attempting to restore variable with shape \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_var_shape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    138\u001b[0m       \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mand name \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me\u001b[39;00m\n\u001b[1;32m    139\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m assigned_variable\n",
+      "\u001b[0;31mValueError\u001b[0m: Received incompatible tensor with shape (512,) when attempting to restore variable with shape (64,) and name layer_with_weights-1/bias/.ATTRIBUTES/VARIABLE_VALUE."
+     ]
+    }
+   ],
    "source": [
     "# checkpoint 를 저장한 파일명을 입력합니다.\n",
     "model.load_weights(checkpoint_path)"
