--- a/_notebooks/2022-10-02-tf-4-자격증_Category_3_(강의)_rps.ipynb
+++ b/_notebooks/2022-10-02-tf-4-자격증_Category_3_(강의)_rps.ipynb
@@ -19,6 +19,50 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3번 문제 이미지\n",
+    "4 종류\n",
+    "type a (2개)\n",
+    "- image data generater\n",
+    "type b (2개)\n",
+    "- tensorflow image data set\n",
+    "\n",
+    "type a(rps)\n",
+    "image augmentation(이미지 변형) 다양한 케이스를 학습하도록 변형해주는 것.\n",
+    "- imageDataGenerator\n",
+    "- flow_from_directory 이미지를 jpg등 파일로\n",
+    "\n",
+    "class_mode\n",
+    "categorical-softmax\n",
+    "binary-sigmoid\n",
+    "\n",
+    "Concolution Neural Network합성곱 신경망\n",
+    "- localization(지역 특성)\n",
+    "\n",
+    "150,150,3-> 3은 컬러라는 뜻RGB\n",
+    "\n",
+    "dense layer하려면 1d가 필요해 선형이니까\n",
+    "\n",
+    "dropout 과대적합 방지"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "iRSKbgK8PRs5"
    },
