--- a/_notebooks/2022-10-02-tf-1-자격증.ipynb
+++ b/_notebooks/2022-10-02-tf-1-자격증.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# TensorFlow 2.0 \n",
-    ">  \n",
+    ">  basic \n",
     "\n",
     "- toc:true\n",
     "- branch: master\n",
@@ -28,43 +28,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "epoch 전체 데이터가 모두 학습한 단위\n",
-    "loss(error) 정답 값과의 오차\n",
-    "accuracy(acc) 정확도\n",
+    "- epoch 전체 데이터가 모두 학습한 단위\n",
+    "- loss(error) 정답 값과의 오차\n",
+    "- accuracy(acc) 정확도\n",
+    "\n",
     "지도학습(supervixed learning) 입력데이터, 출력데이터가 존재\n",
     "- 분류(classification) (2,3,4 문제)\n",
     "- 회귀(regression)_예측  (1,5문제)\n",
+    "- 지도학습(입력 데이터input data_x, features, 출력 데이터output data_y, labels, target)\n",
+    "\n",
     "비지도학습(unsupervised learning) 입력데이터만 존재\n",
     "\n",
     "딥러닝학습, 기계학습 = 머신러닝\n",
-    "지도학습(입력 데이터input data_x, features, 출력 데이터output data_y, labels, target)\n",
-    "\n",
     "\n",
     "딥러닝 학습(실행) 순서\n",
-    "step 1. import 필요한 모듈(라이브러리)를 import 한다.\n",
-    "step 2. 전처리 학습에 필요한 데이터 전처리를 수행한다.\n",
-    "step 3. 모델링(model)모델을 정의한다.\n",
-    "step 4. 컴파일(compile): 모델을 생성한다\n",
-    "step 5. 학습(fit) 모델을 학습한다.\n",
-    "_자격증 시험에서는 predict는 채점자가 함\n",
+    "- step 1. import 필요한 모듈(라이브러리)를 import 한다.\n",
+    "- step 2. 전처리 학습에 필요한 데이터 전처리를 수행한다.\n",
+    "- step 3. 모델링(model)모델을 정의한다.\n",
+    "- step 4. 컴파일(compile): 모델을 생성한다\n",
+    "- step 5. 학습(fit) 모델을 학습한다.\n",
+    "    - 자격증 시험에서는 predict는 채점자가 함\n",
     "\n",
     "나의 예측(모델)\n",
-    "y = W(Weight)x + b\n",
-    "X_input data\n",
-    "y_predicted data\n",
-    "W_Weight\n",
-    "b_bias\n",
+    "- $y = W_{Weight}x + b$\n",
+    "- $X$:input data\n",
+    "- $y$ : predicted data\n",
+    "- $W$ : Weight\n",
+    "- $b$ : bias\n",
     "\n",
     "손실함수(loss function) = 오차\n",
-    "오차의 총합 = 오차의 실제값 - 오차의 예측값\n",
-    "오차의 단순한 합은 0이 된다.\n",
-    "MAE Mearn Absolute Error 오차 절대값 평균\n",
-    "MSE Mean Squared Error 오차 제곱 평균\n",
+    "- 오차의 총합 = 오차의 실제값 - 오차의 예측값\n",
+    "- 오차의 단순한 합은 0이 된다.\n",
+    "    - MAE Mearn Absolute Error 오차 절대값 평균\n",
+    "    - MSE Mean Squared Error 오차 제곱 평균\n",
     "\n",
     "Dense Layer(Fully Connected Layer_FC)\n",
-    "input layer - hidden layer(Neuron=Node) - output data\n",
-    "hidden layer의 노드들이 각각 weight를 가지고 학습한다고 생각\n",
-    "input shape 데이터가 어떤 모양으로 들어오는지 정해주어야 은닉층과 출력층에서 인식"
+    "- input layer - hidden layer(Neuron=Node) - output data\n",
+    "- hidden layer의 노드들이 각각 weight를 가지고 학습한다고 생각\n",
+    "- input shape 데이터가 어떤 모양으로 들어오는지 정해주어야 은닉층과 출력층에서 인식"
    ]
   },
   {
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "id": "SGUQfyotv9GZ"
    },
@@ -143,7 +144,7 @@
        "array([[16.000046]], dtype=float32)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "id": "3p30Klv-t-mt"
    },
@@ -258,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "id": "wATh99gev9Gh"
    },
@@ -270,7 +271,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "id": "NkjkePLsYwkG"
    },
@@ -326,8 +327,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +344,7 @@
        "int"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +364,7 @@
        "list"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -376,13 +384,20 @@
        "tuple"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "type((1,))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -396,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "id": "__cgqqQUZIaX"
    },
@@ -448,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {
     "id": "WsIPBJfI-s8w"
    },
@@ -479,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {
     "id": "_pENMefOv9Gq"
    },
@@ -487,10 +502,10 @@
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f3c583fbee0>"
+       "<keras.callbacks.History at 0x7f092c73e890>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {
     "id": "2dNjbTDkv9Gs"
    },
@@ -528,7 +543,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 58ms/step\n"
+      "1/1 [==============================] - 0s 44ms/step\n"
      ]
     },
     {
@@ -537,7 +552,7 @@
        "array([[16.000046]], dtype=float32)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
