--- a/_notebooks/2022-10-03-tf-7-자격증_Certificate_Category_4_(강의).ipynb
+++ b/_notebooks/2022-10-03-tf-7-자격증_Certificate_Category_4_(강의).ipynb
@@ -25,7 +25,7 @@
     "- sarcasm 데이터 셋(신문기사가 비꼬는지? 확인)\n",
     "\n",
     "언어의 전처리\n",
-    "- token화 - > 쪼갠다 ->단어 사전 만든다. (i_0, am_1,a_2,boy_3,...) -> 치환(0,1,2,3,...) -> 길이(모두 다른 문장의 길이를 맞춰주기 채우거나 자르거나) -> "
+    "- token화 - > 쪼갠다 -> 단어 사전 만든다. (i = 0, am = 1,a = 2,boy = 3,...) -> 치환(0,1,2,3,...) -> 길이(모두 다른 문장의 길이를 맞춰주기 채우거나 자르거나) -> "
    ]
   },
   {
@@ -54,15 +54,6 @@
    "source": [
     "## 순서"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "OLc-W55k9T7k"
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
