--- a/_notebooks/2022-10-03-tf-5-자격증_Certificate_Category_3_cats_vs_dogs_(강의).ipynb
+++ b/_notebooks/2022-10-03-tf-5-자격증_Certificate_Category_3_cats_vs_dogs_(강의).ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "type b (cats vs dogs"
+    "type b (cats vs dogs)"
    ]
   },
   {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {
     "id": "87jVAM8Tsp-e"
    },
@@ -256,7 +256,7 @@
     "for data in train_dataset.take(3):\n",
     "    x = data['image']/255\n",
     "    y = data['label']\n",
-    "    x = tf.image.resize(x,size=(224,224,))\n",
+    "    x = tf.image.resize(x,size=(224,224))\n",
     "    print(x.shape)\n",
     "    print(y)"
    ]
